--- a/templates/jeu/listeJeu.html.twig
+++ b/templates/jeu/listeJeu.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
    <h1 class="text-center text-2xl">Catalogue</h1>
    {{ form_start(formJeu) }}
-   {{ form_row(formJeu.titre) }}
+   {{ form_row(formJeu.titre, {'label': 'Titre du jeu'}) }}
    <input type="submit" class="btn btn-dark mt-2" value="rechercher" />
    {{ form_end(formJeu) }}
     <div class="row">
